--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,9 @@ body {
 
 /* === SECTIONS ===*/
 
+
+/* index */
+
 .contain-index {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -93,6 +96,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 20px;
+    row-gap: 30px;
     margin-top: 20px;
 }
 
@@ -106,7 +110,7 @@ body {
 }
 
 .most-accessed .card-content-accessed {
-    margin: 20px 0 30px 0;
+    margin-top: 20px;
 }
 
 .most-accessed .card-content-accessed h3 {
@@ -122,8 +126,29 @@ body {
     color: #777777;
 }
 
+
+/* about */
+
+.contain-about {
+    margin: 50px auto 0 auto;
+    max-width: var(--maxwidth940);
+    text-align: justify;
+}
+
+.contain-about h1 {
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 20px;
+}
+
+.contain-about h2 {
+    font-size: 20px;
+    line-height: 24px;
+    margin: 30px 0 20px 0;
+}
+
 .footer {
-    margin-top: 20px;
+    margin-top: 50px;
     background: #EEEEEE;
     text-align: center;
     height: 62px;
