--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,33 @@ body {
     margin: 30px 0 20px 0;
 }
 
+
+/* ===== MODAL ===== */
+
+.modal-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal {
+    position: relative;
+    width: 660px;
+    height: 413px;
+    margin: 15vh auto;
+    border-radius: 16px;
+    background-color: #ffffff;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
 .footer {
     margin-top: 50px;
     background: #EEEEEE;
