--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,13 +151,18 @@ body {
 /* ===== MODAL ===== */
 
 .modal-overlay {
-    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
     width: 100%;
     height: 100%;
-    position: fixed;
     top: 0;
+    background-color: rgba(0, 0, 0, 0.7);
     opacity: 0;
     visibility: hidden;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
 }
 
 .modal {
@@ -169,9 +174,42 @@ body {
     background-color: #ffffff;
 }
 
-.modal-overlay.active {
-    opacity: 1;
-    visibility: visible;
+.modal-content {
+    height: 364px;
+}
+
+.modal-content .img-accessed {
+    padding: 30px 30px 20px 30px;
+    height: 200px;
+}
+
+.modal-content .img-accessed img {
+    border-radius: 15px;
+    width: 600px;
+    height: inherit;
+}
+
+.modal-content .card-content-accessed {
+    text-align: center;
+}
+
+.modal-content .card-content-accessed h3 {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    color: #111111;
+}
+
+.modal-content .card-content-accessed .author {
+    font-size: 18px;
+    line-height: 21px;
+    color: #777777;
+}
+
+a.close-modal {
+    color: #999999;
+    position: absolute;
+    left: 279.125px;
 }
 
 .footer {
