--- a/views/layout.njk
+++ b/views/layout.njk
@@ -24,6 +24,6 @@
         <footer class="footer ">
             <h6>Todos direitos reservados, receitas Foodfy.</h6>
         </footer>
-        <script src="assets/js/script.js"></script>
+        <script src="/assets/js/script.js"></script>
     </body>
 </html>
