--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,9 +43,6 @@ body {
 
 /* === SECTIONS ===*/
 
-
-/* index */
-
 .contain-index {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -104,14 +101,35 @@ body {
     height: 140px;
 }
 
-.most-accessed .img-accessed img {
+.card-info .img-accessed {
+    padding: 20px 0 50px 0;
+}
+
+.most-accessed .img-accessed img,
+.card-info .img-accessed img {
     border-radius: 15px;
+}
+
+.card-info .img-accessed {
+    height: 280px;
+}
+
+.most-accessed .img-accessed img {
     width: 300px;
     height: inherit;
 }
 
 .most-accessed .card-content-accessed {
     margin-top: 20px;
+}
+
+.card-info .card-content-accessed {
+    text-align: center;
+}
+
+.card-info .card-content-accessed h3 {
+    font-size: 36px;
+    line-height: 42px;
 }
 
 .most-accessed .card-content-accessed h3 {
@@ -121,10 +139,19 @@ body {
     color: #111111;
 }
 
+.most-accessed .card-content-accessed .author,
+.card-info .card-content-accessed .author {
+    color: #777777;
+}
+
+.card-info .card-content-accessed .author {
+    font-size: 20px;
+    line-height: 24px;
+}
+
 .most-accessed .card-content-accessed .author {
     font-size: 14px;
     line-height: 16px;
-    color: #777777;
 }
 
 
@@ -146,71 +173,6 @@ body {
     font-size: 20px;
     line-height: 24px;
     margin: 30px 0 20px 0;
-}
-
-
-/* ===== MODAL ===== */
-
-.modal-overlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-    opacity: 0;
-    visibility: hidden;
-}
-
-.modal-overlay.active {
-    opacity: 1;
-    visibility: visible;
-}
-
-.modal {
-    position: relative;
-    width: 660px;
-    height: 413px;
-    margin: 15vh auto;
-    border-radius: 16px;
-    background-color: #ffffff;
-}
-
-.modal-content {
-    height: 364px;
-}
-
-.modal-content .img-accessed {
-    padding: 30px 30px 20px 30px;
-    height: 200px;
-}
-
-.modal-content .img-accessed img {
-    border-radius: 15px;
-    width: 600px;
-    height: inherit;
-}
-
-.modal-content .card-content-accessed {
-    text-align: center;
-}
-
-.modal-content .card-content-accessed h3 {
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 28px;
-    color: #111111;
-}
-
-.modal-content .card-content-accessed .author {
-    font-size: 18px;
-    line-height: 21px;
-    color: #777777;
-}
-
-a.close-modal {
-    color: #999999;
-    position: absolute;
-    left: 279.125px;
 }
 
 .footer {
