--- a/views/home.njk
+++ b/views/home.njk
@@ -22,7 +22,7 @@
             {% for card in cards %}
                 <div class="card-accessed">
                     <div class="img-accessed">
-                        <img src="{{card.smallImage}}" alt="{{card.idRecipe}}">
+                        <img src="{{card.smallImage}}" alt="{{card.name}}">
                     </div>
                     <div class="card-content-accessed">
                         <h3>{{card.title}}</h3>
