--- a/views/recipe.njk
+++ b/views/recipe.njk
@@ -10,7 +10,7 @@
             {% for card in cards %}
                 <div id="{{card.idRecipe}}" class="card-accessed">
                     <div class="img-accessed">
-                        <img src="{{card.smallImage}}" alt="{{card.idRecipe}}">
+                        <img src="{{card.smallImage}}" alt="{{card.name}}">
                     </div>
                     <div class="card-content-accessed">
                         <h3>{{card.title}}</h3>
